# jimla

./: .gitignore  README.md  example.py  mtcars_comparison.py  pyproject.toml  test_jimla.py
src/jimla/: __init__.py  regression.py
